--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,6 +38,13 @@
  * For more details, see https://docs.gradle.org/8.4/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
-    api("gregtech:gregtech:2.8.8-beta")
-    implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:5121714")
+    api rfg.deobf("curse.maven:mixin-booter-419286:5079135")
+    api rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848")
+    api rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:5322654")
+    api rfg.deobf("curse.maven:gregicality-multiblocks-564858:5121714")
+    api rfg.deobf("curse.maven:ctm-267602:2915363") // CTM 1.0.2.31
+    api("com.cleanroommc:groovyscript:1.0.1") { transitive = false }
+    api("CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.684")
+
+    compileOnly rfg.deobf("curse.maven:endercore-231868:4671384")
 }
